deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: shardlabsapp
    name: shardlabsapp
spec:
    replicas: 2
    selector:
        matchLabels:
            app: shardlabsapp
    template:
        metadata:
            labels:
                app: shardlabsapp
        spec:
            containers:
            - image: shardlabs_node_app
              imagePullPolicy: IfNotPresent
              name: shardlabsapp
              ports:
              - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: shardlabsapp
    name: shardlabs-pp-svc
spec:
    ports:
    - port: 3000
    selector:
        app: shardlabsapp
