ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shardlabs-pp-svc
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: shardlabs-pp-svc
            port:
              number: 3000
